IDEADEV-1176